@@ -18,7 +18,11 @@
     <url>https://github.com/de-gupta/cleanCrud-sampleImplementation.git</url>
 
     <properties>
+        <argLine></argLine>
         <cleanCrud.version>0.7.3-SNAPSHOT</cleanCrud.version>
+        <it.tag.expression>fast | medium</it.tag.expression>
+        <test.jvm.args>-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading</test.jvm.args>
+        <test.mode>medium</test.mode>
     </properties>
 
     <dependencies>
@@ -99,4 +103,56 @@
         <url>https://github.com/de-gupta/cleanCrud-sampleImplementation.git</url>
         <tag>HEAD</tag>
     </scm>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${argLine} ${test.jvm.args}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>${argLine} ${test.jvm.args}</argLine>
+                    <properties>
+                        <configurationParameters>junit.jupiter.tags.include = ${it.tag.expression}</configurationParameters>
+                    </properties>
+                    <systemPropertyVariables>
+                        <testMode>${test.mode}</testMode>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>fast-it</id>
+            <properties>
+                <it.tag.expression>fast</it.tag.expression>
+                <test.mode>fast</test.mode>
+            </properties>
+        </profile>
+        <profile>
+            <id>medium-it</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <it.tag.expression>fast | medium</it.tag.expression>
+                <test.mode>medium</test.mode>
+            </properties>
+        </profile>
+        <profile>
+            <id>full-it</id>
+            <properties>
+                <it.tag.expression>fast | medium | full</it.tag.expression>
+                <test.mode>full</test.mode>
+            </properties>
+        </profile>
+    </profiles>
 </project>
